# source/openapi_server/openapi/openapi.yaml
@@ -54,7 +54,7 @@ paths:
         schema:
           $ref: '#/components/schemas/CollectionId'
         style: simple
-      - description: bouding box
+      - description: bounding box
         explode: false
         in: query
         name: bbox
@@ -65,10 +65,10 @@ paths:
       - description: start and end time
         explode: false
         in: query
-        name: timespan
+        name: datetime
         required: true
         schema:
-          $ref: '#/components/schemas/TimeSpan'
+          $ref: '#/components/schemas/DateTime'
         style: simple
       responses:
         "200":
@@ -98,7 +98,7 @@ components:
         $ref: '#/components/schemas/CollectionId'
       style: simple
     BoundingBox:
-      description: bouding box
+      description: bounding box
       explode: false
       in: query
       name: bbox
@@ -106,14 +106,14 @@ components:
       schema:
         $ref: '#/components/schemas/BoundingBox'
       style: simple
-    TimeSpan:
+    DateTime:
       description: start and end time
       explode: false
       in: query
-      name: timespan
+      name: datetime
       required: true
       schema:
-        $ref: '#/components/schemas/TimeSpan'
+        $ref: '#/components/schemas/DateTime'
       style: simple
   responses:
     "400Error":
@@ -138,15 +138,15 @@ components:
           type: string
     CollectionId:
       description: collection id
-      example: MUR25-JPL-L4-GLOB-v4.2_analysed_sst
+      example: JPL_MUR25-JPL-L4-GLOB-v04.2
       type: string
     BoundingBox:
       description: bounding box
-      example: 11.49,48.05,11.66,48.22
+      example: -160,-15,-130,15
       type: string
-    TimeSpan:
+    DateTime:
       description: start/end time in iso format
-      example: 2018-02-12T00:00:00Z/2018-03-18T12:31:12Z
+      example: 2022-01-01T00:00:00Z/2022-01-31T23:59:59Z
       type: string
     Processes:
       items:
